// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Checkbox Multiple should be not edidable 1`] = `
<div class="form-group">
  <div class="form-group">
    <div class="lfr-ddm-form-field-checkbox-switch  "><label class="simple-toggle-switch toggle-switch"><input class="toggle-switch-check" type="checkbox"><span aria-hidden="true" class="toggle-switch-bar"><span class="toggle-switch-handle"></span></span><span class="toggle-switch-label">Option 1</span></label></div>
    <div class="lfr-ddm-form-field-checkbox-switch  "><label class="simple-toggle-switch toggle-switch"><input class="toggle-switch-check" type="checkbox"><span aria-hidden="true" class="toggle-switch-bar"><span class="toggle-switch-handle"></span></span><span class="toggle-switch-label">Option 2</span></label></div>
  </div>
</div>
`;

exports[`Field Checkbox Multiple should be shown as a switcher 1`] = `
<div class="form-group">
  <div class="form-group">
    <div class="lfr-ddm-form-field-checkbox-switch  "><label class="simple-toggle-switch toggle-switch"><input class="toggle-switch-check" type="checkbox"><span aria-hidden="true" class="toggle-switch-bar"><span class="toggle-switch-handle"></span></span><span class="toggle-switch-label">Option 1</span></label></div>
    <div class="lfr-ddm-form-field-checkbox-switch  "><label class="simple-toggle-switch toggle-switch"><input class="toggle-switch-check" type="checkbox"><span aria-hidden="true" class="toggle-switch-bar"><span class="toggle-switch-handle"></span></span><span class="toggle-switch-label">Option 2</span></label></div>
  </div>
</div>
`;

exports[`Field Checkbox Multiple should be shown as checkbox 1`] = `
<div class="form-group">
  <div class="form-group">
    <div class="custom-control custom-checkbox"><label><input class="custom-control-input" ref="input" type="checkbox"><span class="custom-control-label"><span class="custom-control-label-text">Option 1</span></span></label></div>
    <div class="custom-control custom-checkbox"><label><input class="custom-control-input" ref="input" type="checkbox"><span class="custom-control-label"><span class="custom-control-label-text">Option 2</span></span></label></div>
  </div>
</div>
`;

exports[`Field Checkbox Multiple should have a helptext 1`] = `
<div class="form-group">
  <div class="form-group">
    <div class="lfr-ddm-form-field-checkbox-switch  "><label class="simple-toggle-switch toggle-switch"><input class="toggle-switch-check" type="checkbox"><span aria-hidden="true" class="toggle-switch-bar"><span class="toggle-switch-handle"></span></span><span class="toggle-switch-label">Option 1</span></label></div>
    <div class="lfr-ddm-form-field-checkbox-switch  "><label class="simple-toggle-switch toggle-switch"><input class="toggle-switch-check" type="checkbox"><span aria-hidden="true" class="toggle-switch-bar"><span class="toggle-switch-handle"></span></span><span class="toggle-switch-label">Option 2</span></label></div>
  </div><span class="form-text">Type something</span>
</div>
`;

exports[`Field Checkbox Multiple should have a key 1`] = `
<div class="form-group">
  <div class="form-group">
    <div class="lfr-ddm-form-field-checkbox-switch  "><label class="simple-toggle-switch toggle-switch"><input class="toggle-switch-check" type="checkbox"><span aria-hidden="true" class="toggle-switch-bar"><span class="toggle-switch-handle"></span></span><span class="toggle-switch-label">Option 1</span></label></div>
    <div class="lfr-ddm-form-field-checkbox-switch  "><label class="simple-toggle-switch toggle-switch"><input class="toggle-switch-check" type="checkbox"><span aria-hidden="true" class="toggle-switch-bar"><span class="toggle-switch-handle"></span></span><span class="toggle-switch-label">Option 2</span></label></div>
  </div>
</div>
`;

exports[`Field Checkbox Multiple should have a label 1`] = `
<div class="form-group">
  <div class="form-group">
    <div class="lfr-ddm-form-field-checkbox-switch  "><label class="simple-toggle-switch toggle-switch"><input class="toggle-switch-check" type="checkbox"><span aria-hidden="true" class="toggle-switch-bar"><span class="toggle-switch-handle"></span></span><span class="toggle-switch-label">Option 1</span></label></div>
    <div class="lfr-ddm-form-field-checkbox-switch  "><label class="simple-toggle-switch toggle-switch"><input class="toggle-switch-check" type="checkbox"><span aria-hidden="true" class="toggle-switch-bar"><span class="toggle-switch-handle"></span></span><span class="toggle-switch-label">Option 2</span></label></div>
  </div>
</div>
`;

exports[`Field Checkbox Multiple should have a predefined Value 1`] = `
<div class="form-group">
  <div class="form-group">
    <div class="lfr-ddm-form-field-checkbox-switch  "><label class="simple-toggle-switch toggle-switch"><input class="toggle-switch-check" type="checkbox"><span aria-hidden="true" class="toggle-switch-bar"><span class="toggle-switch-handle"></span></span><span class="toggle-switch-label">Option 1</span></label></div>
    <div class="lfr-ddm-form-field-checkbox-switch  "><label class="simple-toggle-switch toggle-switch"><input class="toggle-switch-check" type="checkbox"><span aria-hidden="true" class="toggle-switch-bar"><span class="toggle-switch-handle"></span></span><span class="toggle-switch-label">Option 2</span></label></div>
  </div>
</div>
`;

exports[`Field Checkbox Multiple should have a spritemap 1`] = `
<div class="form-group">
  <div class="form-group">
    <div class="lfr-ddm-form-field-checkbox-switch  "><label class="simple-toggle-switch toggle-switch"><input class="toggle-switch-check" type="checkbox"><span aria-hidden="true" class="toggle-switch-bar"><span class="toggle-switch-handle"></span></span><span class="toggle-switch-label">Option 1</span></label></div>
    <div class="lfr-ddm-form-field-checkbox-switch  "><label class="simple-toggle-switch toggle-switch"><input class="toggle-switch-check" type="checkbox"><span aria-hidden="true" class="toggle-switch-bar"><span class="toggle-switch-handle"></span></span><span class="toggle-switch-label">Option 2</span></label></div>
  </div>
</div>
`;

exports[`Field Checkbox Multiple should have a value 1`] = `
<div class="form-group">
  <div class="form-group">
    <div class="lfr-ddm-form-field-checkbox-switch  "><label class="simple-toggle-switch toggle-switch"><input class="toggle-switch-check" type="checkbox"><span aria-hidden="true" class="toggle-switch-bar"><span class="toggle-switch-handle"></span></span><span class="toggle-switch-label">Option 1</span></label></div>
    <div class="lfr-ddm-form-field-checkbox-switch  "><label class="simple-toggle-switch toggle-switch"><input class="toggle-switch-check" type="checkbox"><span aria-hidden="true" class="toggle-switch-bar"><span class="toggle-switch-handle"></span></span><span class="toggle-switch-label">Option 2</span></label></div>
  </div>
</div>
`;

exports[`Field Checkbox Multiple should have an id 1`] = `
<div class="form-group">
  <div class="form-group">
    <div class="lfr-ddm-form-field-checkbox-switch  "><label class="simple-toggle-switch toggle-switch"><input class="toggle-switch-check" type="checkbox"><span aria-hidden="true" class="toggle-switch-bar"><span class="toggle-switch-handle"></span></span><span class="toggle-switch-label">Option 1</span></label></div>
    <div class="lfr-ddm-form-field-checkbox-switch  "><label class="simple-toggle-switch toggle-switch"><input class="toggle-switch-check" type="checkbox"><span aria-hidden="true" class="toggle-switch-bar"><span class="toggle-switch-handle"></span></span><span class="toggle-switch-label">Option 2</span></label></div>
  </div>
</div>
`;

exports[`Field Checkbox Multiple should not be required 1`] = `
<div class="form-group">
  <div class="form-group">
    <div class="lfr-ddm-form-field-checkbox-switch  "><label class="simple-toggle-switch toggle-switch"><input class="toggle-switch-check" type="checkbox"><span aria-hidden="true" class="toggle-switch-bar"><span class="toggle-switch-handle"></span></span><span class="toggle-switch-label">Option 1</span></label></div>
    <div class="lfr-ddm-form-field-checkbox-switch  "><label class="simple-toggle-switch toggle-switch"><input class="toggle-switch-check" type="checkbox"><span aria-hidden="true" class="toggle-switch-bar"><span class="toggle-switch-handle"></span></span><span class="toggle-switch-label">Option 2</span></label></div>
  </div>
</div>
`;

exports[`Field Checkbox Multiple should render Label if showLabel is true 1`] = `
<div class="form-group"><label>text </label>
  <div class="form-group">
    <div class="lfr-ddm-form-field-checkbox-switch  "><label class="simple-toggle-switch toggle-switch"><input class="toggle-switch-check" type="checkbox"><span aria-hidden="true" class="toggle-switch-bar"><span class="toggle-switch-handle"></span></span><span class="toggle-switch-label">Option 1</span></label></div>
    <div class="lfr-ddm-form-field-checkbox-switch  "><label class="simple-toggle-switch toggle-switch"><input class="toggle-switch-check" type="checkbox"><span aria-hidden="true" class="toggle-switch-bar"><span class="toggle-switch-handle"></span></span><span class="toggle-switch-label">Option 2</span></label></div>
  </div>
</div>
`;
